tests/should_not_compile/not_in_range_from.stderr
error: discriminant does not match any pattern
 --> tests/should_not_compile/not_in_range_from.rs:6:12
  |
6 |     Zero = 0,
  |            ^
